[package]
name = "rs-pod"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
dotenv = "0.15"
url = "2.5.7"
rand = "0.8"
webbrowser = "1.0.5"
serde = "1.0.228"
tiny_http = "0.12.0"
serde_json = "1.0.145"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"